# cli-manager

./: README.md  cleaned.sh  dirty.sh  example  pyproject.toml  pytest.ini  remover.py  requirements-dev.txt  superclisubs  temp.py
src/cli_manager/: autocompletion.py  core.py  initialize.py
src/cli_manager/commands/: add.py  completioninit.py  completionrefresh.py  remove.py  show.py
src/cli_manager/subcli/: core.py  sub1.py  sub2.py
src/cli_manager/utils/: completion_utils.py  hash_cleaner.py  install_completion.py  managed_completion.py  meta_parser.py  wrapper_utils.py
tests/: conftest.py
tests/cli_manager/utils/: test_completion_utils.py  test_hash_cleaner.py  test_install_completion.py  test_managed_completion.py  test_meta_parser.py  test_wrapper_utils.py
tests/commands/: test_add.py  test_show.py
