[project]
name = "cli-manager"
version = "1.0.0"
description = ""
authors = [
    {name = "Sisung Kim",email = "sisung.kim1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[project.scripts]
supercli = "cli_manager.core:main"
subcli1 = "cli_manager.subcli.sub1:main"
subcli2 = "cli_manager.subcli.sub2:main"